web/styles.css
@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Press Start 2P', regular;
  background: radial-gradient(rgb(143, 84, 17),rgb(180, 39, 29));
  overflow: hidden;
}

main {
  display: block;
  width: 100%;
  height: 100%;
  transition: background-color ease-in 2s; 
  background-color: #000000;
}

main.active {
  background-color: transparent;
}

.layer                                                                                                                                                                                                                                                                                                                                                                                                               {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: opacity ease-in 2s;
}
.layer.active {
  opacity: 1;
}

#inputLayer{
  pointer-events: none;
  z-index: 100;
}
#inputLayer.active {
  pointer-events: all;
}

#inputKnob {
  position: absolute;
  display: block;
  width: 50px;
  height: 50px;
  left: 0;
  top: 0;
  pointer-events: none;
  border-radius: 100%;
  transition: opacity 0.2s;
  opacity: 0;
  background: radial-gradient( rgba(255, 255, 255, 0.2), rgba(100, 100, 100, 0.5) );
  border: solid 1px rgba(255, 255, 255, 0.2);
}
#inputKnob.active {
  opacity: 0.8;
}

header {
  position: absolute;
  display: block;
  top: 25%;
  width: 100%;
  height: auto;
  text-align: center;
  text-transform: capitalize;
  color: #cccccc;
  font-size: 40px;
  line-height: 40px;
  transform: translate(0%, -100%);
}

nav {
  display: flex;
  position: absolute;
  left: 0;
  top: 25%;
  width: 100%;
  height: 50%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}


nav > button {
  box-sizing: border-box;
  font-family: 'Press Start 2P', regular;
  font-size: 30px;
  line-height: 30px;
  color: #cccccc;
  text-decoration: underline;
  text-transform: capitalize;
  text-align: center;
  padding: 25px;
  background-color: transparent;
  border: none;
  outline: none;
  transition: background-color 0.2s;
  width: 100%;
}

nav > button:hover, nav > button:focus {
  background-color: rgba(255,255,255,0.1);
  cursor: pointer;
}

#bigLabel {
  position: absolute;
  z-index: 100;
  display: block;
  left: 50%;
  top: 25%;
  width: 100%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: #cccccc;
  font-size: 40px;
  line-height: 40px;
  opacity: 0;
  transition: opacity ease 0.3s;
  pointer-events: none;
}

#bigLabel.active {
  opacity: 1;
}



#world {
  position: absolute;
  z-index: 0;
  display: block;
  background-color: rgba(0,0,0,0.55);
  width: 500px;
  height: 500px;
  left: 50%;
  top: 50%;
}

#world.changing {
  will-change: transform;
}


.actor {
  background-color: #000;
  z-index: 1;
  position: absolute;
  display: block;
  width: 50px;
  height: 50px;
  left: 0;
  top: 0;
  transform: translate(-50%, -50%);
  transform-origin: 50% 50%;
}

.actor#Character {
  z-index: 2;
  border-radius: 100%;
  transition: background-color 0.2s;
  background-color: #fff;
  left: 50%;
  top: 50%;
}

.actor#Character.active {
  background-color: rgba(0,255,0, 1.0);
}

.actor.door {
  background-color: rgba(255,255,0, 1.0);
}

.actor.enemy {
  background-color: rgba(255,0,0, 1.0);
}

.actor.circle {
  border-radius: 100%;
}

.hidden {
  display: none;
}

